--- a/homeworks/hw3/style.scss
+++ b/homeworks/hw3/style.scss
@@ -1,4 +1,37 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
 h1 {
     color:red; 
     text-align: center;
+    text-transform: uppercase;
+    margin-top: 2rem;
+}
+
+.container{
+    margin: 0 auto;
+    max-width: 1400px;
+}
+.cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+
+.card {
+    width: 300px;
+    height: 200px;
+    border: 1px solid black;
+    box-sizing: border-box;
+}
+
+.card h3 {
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 8rem;
 }
