--- a/homeworks/hw3/src/style.scss
+++ b/homeworks/hw3/src/style.scss
@@ -6,7 +6,7 @@ body {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 h1 {
-    color:red; 
+    color:#8B0000; 
     text-align: center;
     text-transform: uppercase;
     margin-top: 2rem;
@@ -26,12 +26,17 @@ h1 {
 .card {
     width: 300px;
     height: 200px;
-    border: 1px solid black;
+    border: 1px solid #cccc;
     box-sizing: border-box;
+    margin-bottom: 2rem;
 }
 
 .card h3 {
     text-align: center;
     text-transform: uppercase;
-    margin-top: 8rem;
+}
+
+.card img {
+    width: 100%;
+    height: 150px;
 }
